--- a/tests/math.tex
+++ b/tests/math.tex
@@ -12,8 +12,13 @@
 %% arara: clean: { extensions: [ plCode, plData, plMath, plExercise, plNote, plQuote, ] }
 %-----------------------------------------------------------------
 \documentclass[12pt]{PalisadesLakesArticle}
-\geomLetter
-\geomPortraitOneColumn
+\geomHDTV
+\geomLandscape
+%\CormorantFonts
+%\EBGaramondFonts
+%\XITSFonts
+\STIXTwoFonts
+
 %-----------------------------------------------------------------
 \title{Font tests}
 \author{John Alan McDonald 
